--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Fusion en Español
 site_description: Una biblioteca reactiva moderna, construida específicamente para Roblox y Luau.
-site_url: https://vexot.github.io/Fusion/es/
+site_url: https://vexot.github.io/Fusion/
 repo_name: Elttob/Fusion
 repo_url: https://github.com/Elttob/Fusion
 
